day-3 update index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p class="left-title">Contact info</p>
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 11 92262-0422</li>
-                        <li><i class="fa fa-envelope"></i>sasha.zamo@contact.com</li>
+                        <li><i class="fa fa-envelope"></i>sasha.velour@contact.com</li>
                         <li><i class="fa fa-globe"></i>www.sashashow.com</li>
                         <li><i class="fa fa-github"></i>voodoolly</li>
                     </ul>
@@ -35,7 +35,7 @@
                             <p>HTML, CSS, Git & Github</p>
                         </li>
                         <li>
-                            <p>JavaScript, .NET, Phyton</p>
+                            <p>JavaScript, .NET, Python</p>
                         </li>
                     </ul>
                 </div>
@@ -46,12 +46,39 @@
                 <section class="about gap">
                     <div class="right-title">About me</div>
                     <p class="about-me-contents">
-                        Hi, I'm Sasha Zamo. I'm a drag queen, artist, producer and new at programming.<br>
-                        <br>A little bit more about what I do
-                        <br>What is my competences
+                        Hi, I'm Sasha Velour. I'm a drag queen, artist, producer and new at programming.<br>
+                        <br>I'm fascinated about software development and I'm now I'm fully immersed on learning 
+                        the first steps on front-end dev, such as HTML, CSS and JavaScript.
+                        <br>I'm creative, artsy and always pushing my limits. I'm known in the drag scene for using 
+                        audiovisual equipment for my performances. And I'm bringing my artistic view and well done 
+                        produced art to Software Development!
                     </p>
                 </section>
             </div>
+        <section class="experience gap">
+            <div class="right-title">Experience</div>
+            <div class="experience-contents">
+                <div class="exp-left">
+                    <p class="exp-company-name">Smoke & Mirrors Theater Show</p>
+                    <p class="exp-time-period">2019 - 2022</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Creator and Director</p>
+                    <p class="exp-desc">Production, executive diretor, lip-syncer and hostess.</p>
+                </div>
+                <div class="exp-left">
+                    <p class="exp-company-name">RuPaul's Drag Race</p>
+                    <p class="exp-time-period">2017 - 2017</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Contestant</p>
+                    <p class="exp-desc">Ninth season winner and starred in the music video for the non-record 
+                        single "C.L.A.T."</p>
+                </div>
+                </div>
+            </div>
+
+        </section>
         </section>
     </main>
 </body>
