day-4 feature: education

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
                     <p class="name">Sasha Velour</p>
-                    <p class="profession">Drag queen artist and front-end developer.</p>
+                    <p class="profession">Drag queen artist, scientist and front-end developer.</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contact info</p>
@@ -46,39 +46,75 @@
                 <section class="about gap">
                     <div class="right-title">About me</div>
                     <p class="about-me-contents">
-                        Hi, I'm Sasha Velour. I'm a drag queen, artist, producer and new at programming.<br>
-                        <br>I'm fascinated about software development and I'm now I'm fully immersed on learning 
+                        Hi, I'm Sasha Velour. I'm a drag queen, scientist, artist, producer and new at programming.<br>
+                        <br>I'm fascinated about software development and I'm now I'm fully immersed on learning
                         the first steps on front-end dev, such as HTML, CSS and JavaScript.
-                        <br>I'm creative, artsy and always pushing my limits. I'm known in the drag scene for using 
-                        audiovisual equipment for my performances. And I'm bringing my artistic view and well done 
-                        produced art to Software Development!
+                        <br>I'm creative, artsy and always pushing my limits. I'm known in the drag scene for using
+                        audiovisual equipment for my performances. And I'm bringing my artistic view and well done
+                        produced art, and critical and investigative analysis derived from my science background 
+                        to Software Development!
                     </p>
                 </section>
             </div>
-        <section class="experience gap">
-            <div class="right-title">Experience</div>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Smoke & Mirrors Theater Show</p>
-                    <p class="exp-time-period">2019 - 2022</p>
+            <section class="experience gap">
+                <div class="right-title">Experience</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Blood Therapies</p>
+                        <p class="exp-time-period">2021 - Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Biologist supervisor</p>
+                        <p class="exp-desc">Lab managing focusing on quality control.</p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Smoke & Mirrors Theater Show</p>
+                        <p class="exp-time-period">2019 - 2022</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Creator and Director</p>
+                        <p class="exp-desc">Production, executive diretor, lip-syncer and hostess.</p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">RuPaul's Drag Race</p>
+                        <p class="exp-time-period">2017 - 2017</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Contestant</p>
+                        <p class="exp-desc">Ninth season winner and starred in the music video for the non-record
+                            single "C.L.A.T.".</p>
+                    </div>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Creator and Director</p>
-                    <p class="exp-desc">Production, executive diretor, lip-syncer and hostess.</p>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Education</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">SENAC</p>
+                        <p class="education-time-period">2022 - 2024</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">System Analisys and Development</p>
+                        <p class="education-desc">Technologist in System Analisys and Development</p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">Centro Universitário São Camilo</p>
+                        <p class="education-time-period">2021 - 2022</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Hematology, Hemotherapy and Cell Therapy</p>
+                        <p class="education-desc">Lato sensu postgraduate</p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">FMU</p>
+                        <p class="education-time-period">2016 - 2019</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Biomedical Science</p>
+                        <p class="education-desc">Graduate course</p>
+                    </div>
                 </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">RuPaul's Drag Race</p>
-                    <p class="exp-time-period">2017 - 2017</p>
-                </div>
-                <div class="exp-right">
-                    <p class="exp-position">Contestant</p>
-                    <p class="exp-desc">Ninth season winner and starred in the music video for the non-record 
-                        single "C.L.A.T."</p>
-                </div>
-                </div>
-            </div>
-
-        </section>
+            </section>
         </section>
     </main>
 </body>
