feature-add-certificates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         the first steps on front-end dev, such as HTML, CSS and JavaScript.
                         <br>I'm creative, artsy and always pushing my limits. I'm known in the drag scene for using
                         audiovisual equipment for my performances. And I'm bringing my artistic view and well done
-                        produced art, and critical and investigative analysis derived from my science background 
+                        produced art, and critical and investigative analysis derived from my science background
                         to Software Development!
                     </p>
                 </section>
@@ -112,6 +112,27 @@
                     <div class="education-right">
                         <p class="education-subject">Biomedical Science</p>
                         <p class="education-desc">Graduate course</p>
+                    </div>
+                </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Certificates</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">July 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Jornada Dev</p>
+                        <p class="awards-desc">Introductory classes in programming using HTML and CSS.</p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">Tech Future</p>
+                        <p class="awards-time-period">March 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Becoming a Success Programmer</p>
+                        <p class="awards-desc">Lecture journey about the first steps in the programming career.</p>
                     </div>
                 </div>
             </section>
