--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@800;800&display=swap" rel="stylesheet"> 
 
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -63,7 +63,7 @@
                         to Software Development!
                     </p>
                 </section>
-            </div>
+            
             <section class="experience gap">
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
@@ -144,6 +144,7 @@
                     </div>
                 </div>
             </section>
+        </div>
         </section>
     </main>
 </body>
